# devprop

./: .gitignore  INTEGRATION_GUIDE.md  README.md  pyproject.toml  setup.cfg
devprop/: client.py  devscan.py  getprop.py  manifest.py  manifest_compiler.py  model.py  property.py  setprop.py  test_server.py
devprop-ocarina/: setup.cfg
devprop-ocarina/devprop_transport_ocarina/: ocarina.py  ocarina_adapter.py
devprop/can_bus/: adapter.py  python_can_adapter.py  serial_wrapped_can_adapter.py  transport_plugin.py
devprop/lang_c/: __init__.py
devprop/lang_c/templates/: devprop_user.c  devprop_user.h  devprop_user_stubs.c
devprop/protocol_can_ext_v1/: messages.py  model.py  state_machines.py
devprop/test/: test_manifest_validation.py
devprop_explorer/: setup.cfg
devprop_explorer/devprop_explorer/: main.py  mainwindow.ui  models.py
doc/: SPEC.md  byte_stream_wrapping.md
examples/: FSE10.HELLO.yml
lang_c/: .gitignore  Makefile  devprop.h  devprop_FSE10_HELLO.c  devprop_FSE10_HELLO.h  devprop_FSE10_HELLO_stubs.c  devprop_can_ext_v1.h  test_offline.c
