[metadata]
name = devprop
version = attr: devprop.VERSION
description = A device-property model for CAN bus
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CAN bus
license = MIT
url = https://eforce.cvut.cz/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    importlib-metadata>=4.4; python_version < '3.10'
    Jinja2
    python-can
    PyYAML
packages = devprop
python_requires = >=3.9

[options.entry_points]
console_scripts =
    devscan = devprop.devscan:main
    getprop = devprop.getprop:main
    setprop = devprop.setprop:main
    devprop-mkmanifest = devprop.manifest_compiler:main
    devprop-test-server = devprop.test_server:main

[options.extras_require]
dev =
    black
    mypy
    pytest
