[metadata]
name = devprop-ocarina
version = attr: devprop_transport_ocarina.VERSION
description = A device-property model for CAN bus
# long_description = file: README.md
# long_description_content_type = text/markdown
keywords = CAN bus
license = MIT
url = https://eforce.cvut.cz/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    devprop
    pyserial
packages = devprop_transport_ocarina
python_requires = >=3.9

[options.entry_points]
devprop.can_bus.adapter =
    ocarina = devprop_transport_ocarina.ocarina_adapter:OcarinaAdapter

[options.extras_require]
dev =
    black
    mypy
