[metadata]
name = devprop-explorer
version = attr: devprop_explorer.VERSION
description = A device-property model for CAN bus
# long_description = file: README.md
# long_description_content_type = text/markdown
keywords = CAN bus
license = MIT
url = https://eforce.cvut.cz/
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    devprop
    PySide2
packages = devprop_explorer
python_requires = >=3.9

[options.extras_require]
dev =
    black
    mypy
